# llmops-databricks-course-VanessaSchl

./: .gitignore  CLAUDE.md  Taskfile.yaml  databricks.yml  pyproject.toml
.github/: CODEOWNERS
configs/: ingestion.yml
notebooks/: crawl_pages.py  ingest_feeds.py  ingest_release_notes.py
resources/: crawl_pages_job.yml  hello_world_job.yml  ingest_feeds_job.yml  ingest_release_notes_job.yml
src/databricks_docs/: config.py  page_crawler.py  rss_ingestor.py  utils.py
src/your_custom_package/: __init__.py
tests/: __init__.py  test_basic.py  test_page_crawler.py  test_rss_ingestor.py
